@@ -9,6 +9,7 @@ language: perl
 perl:
   - blead
   - dev
+  - '5.26'
   - '5.24'
   - '5.22'
   - '5.20'
@@ -18,13 +19,22 @@ perl:
   - '5.12'
   - '5.10'
   - '5.8'
+cache:
+  directories:
+    - $HOME/perl5
 matrix:
   allow_failures:
     - perl: blead
 # Removed COVERAGE intentionally because this distro somehow fails with coverage on.
 env:
   global:
-    - RELEASE_TESTING=1
     - AUTHOR_TESTING=1
+    - RELEASE_TESTING=1
 before_install:
-  - eval $(curl https://travis-perl.github.io/init) --auto
+  - eval $(curl https://travis-perl.github.io/init) --auto --always-upgrade-modules
+### __app_cisetup__
+# ---
+# force_threaded_perls: 0
+# perl_caching: 1
+
+### __app_cisetup__
